Closed Bug 799970 Opened 13 years ago Closed 13 years ago

Activate HangMonitor for non-queued messages on Windows

Categories

(Core :: XPCOM, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

Details

Attachments

(1 file)

Attached patch Patch, v1Splinter Review
We don't have any hang monitor protection for non-queued messages right now (i.e. messages that run during PeekMessage). Attached patch should handle this case.
Attachment #669984 - Flags: review?(benjamin)
Attachment #669984 - Flags: review?(benjamin) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Should this have a test?
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: