Bug 799970 - 'Activate HangMonitor for non-queued messages on Windows'. r=bsmedberg.